fixed spacing in contact

--- a/src/scss/Contact.scss
+++ b/src/scss/Contact.scss
@@ -101,6 +101,6 @@
   }
 
   @media (max-height: 750px) {
-    padding: 2rem 0;
+    padding: 3.5rem 0;
   }
 }
